--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
+  - title: "Postes"
     url: /posts/
-  - title: "Categories"
+  - title: "Catégories"
     url: /categories/
   - title: "Tags"
     url: /tags/
-  - title: "About"
+  - title: "À Propos"
     url: /about/
