--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
       url: "mailto:florent.appoiintaire@gmail.com"
     - label: "FALA Consulting"
       icon: "fas fa-fw fa-link"
-      url: "https://wwww.falaconsulting.be"
+      url: "https://www.falaconsulting.be"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/florent_app"
