--- a/_config.yml
+++ b/_config.yml
@@ -94,10 +94,10 @@ analytics:
 # Site Author
 author:
   name             : "Florent Appointaire"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Belgium"
-  email            :
+  avatar : "/assets/images/fa-avatar.jpg"
+  bio    : "Freelance, Microsoft MVP Azure."
+  location : "Belgium"
+  email            : "florent.appointaire@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -274,8 +274,9 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
-      related: true
+      related: #true
