--- a/_config.yml
+++ b/_config.yml
@@ -279,4 +279,16 @@ defaults:
       read_time: true
       comments: true
       share: true
+      show_date: true
       related: #true
+
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      classes: wide
+      author_profile: true
+      read_time: true
