--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : google # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : google-universal # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : G-6F0CMDMZVY
     anonymize_ip         : # true, false (default)
