--- a/_config.yml
+++ b/_config.yml
@@ -281,6 +281,8 @@ defaults:
       share: true
       show_date: true
       related: #true
+      sidebar:
+        - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
   # _pages
   - scope:
       path: ""
