--- a/_config.yml
+++ b/_config.yml
@@ -273,12 +273,12 @@ defaults:
       path: ""
       type: posts
     values:
+      author_profile: true
       sidebar:
         - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
         - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
       layout: single
       classes: wide
-      author_profile: true
       read_time: true
       comments: true
       share: true
@@ -295,3 +295,4 @@ defaults:
       read_time: true
       sidebar:
         - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
+        - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
