--- a/_config.yml
+++ b/_config.yml
@@ -286,7 +286,7 @@ defaults:
       related: #true
   # _pages
   - scope:
-      path: ""
+      path: "_pages"
       type: pages
     values:
       layout: single
