--- a/_config.yml
+++ b/_config.yml
@@ -260,19 +260,20 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: "_posts"
+      path: ""
       type: posts
     values:
+      layout: single
+      classes: wide
       author_profile: true
+      read_time: true
       sidebar:
         - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
         - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
-      layout: single
-      classes: wide
       read_time: true
       comments: true
       share: true
-      show_date: true
+      show_date: #true
       related: #true
   # _pages
   - scope:
