--- a/_config.yml
+++ b/_config.yml
@@ -268,4 +268,7 @@ defaults:
       read_time: true
       comments: true
       share: true
-      related: true
+      related: false
+      sidebar:
+        - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
+        - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
