--- a/_config.yml
+++ b/_config.yml
@@ -99,9 +99,6 @@ author:
   location : "Belgium"
   email            : "florent.appointaire@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:florent.appoiintaire@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/florent_app"
@@ -272,3 +269,11 @@ defaults:
       sidebar:
         - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
         - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
+  defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
