--- a/_config.yml
+++ b/_config.yml
@@ -269,3 +269,6 @@ defaults:
     values:
       layout: single
       author_profile: true
+      sidebar:
+        - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
+        - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
