--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : &twitter "florent_app"
+  username               : "florent_app"
 facebook:
-  username               : &facebook "FlorentAppointaireFr"
+  username               : "FlorentAppointaireFr"
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Florent Appointaire"
+  name : "Florent Appointaire"
   avatar : "/assets/images/fa-avatar.jpg"
   bio    : "Freelance, Microsoft MVP Azure."
   location : "Belgium"
