--- a/_config.yml
+++ b/_config.yml
@@ -255,6 +255,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      classes: wide
       read_time: true
       comments: true
       share: true
@@ -269,6 +270,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      classes: wide
       sidebar:
         - text: "[![MVP](/assets/logo/mvpsidebar.png)](https://mvp.microsoft.com/en-us/PublicProfile/5001873?fullName=Florent%20APPOINTAIRE)"
         - text: "[![FALA Consulting](/assets/logo/FALAconsultingsidebar.jpg)](https://www.falaconsulting.be)"
