--- a/_config.yml
+++ b/_config.yml
@@ -85,9 +85,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : google-universal # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : G-6F0CMDMZVY
+    tracking_id          : "G-6F0CMDMZVY"
     anonymize_ip         : false
 
 
