--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : "Blog autour des solutions Cloud de Microsoft (Azure) & Amazon (AWS)." # site tagline that appears below site title in masthead
 name                     : "Florent Appointaire"
 description              : "Blog autour des solutions Cloud de Microsoft (Azure) & Amazon (AWS)."
-url                      : #https://blog.cloudyjourney.fr # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://cloudyjourney.fr # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "Flodu31/Flodu31.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -63,7 +63,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification : "hSMxqLBb-Ovqy9IudxE1YZJfxWfvPIn2enMnzVFL5uE"
+google_site_verification :
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
